// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingBreakdown customer transaction data matches snapshot 1`] = `
<div
  className=""
>
  Array [
    <div>
      <div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div>
            <span>
              Fri 8:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 14
            </span>
          </div>
        </div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div>
            <span>
              Sun 10:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 16
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr />,
  ]
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerQuantity
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.baseUnitQuantity
      </span>
    </span>
    <span>
      40
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.peopleDiscountText
      </span>
    </span>
    <span>
      -10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.hoursDiscountText
      </span>
    </span>
    <span>
      -4
    </span>
  </div>
  Array [
    <hr />,
    <div>
      <div>
        <span>
          BookingBreakdown.total
        </span>
      </div>
      <div>
        20
      </div>
    </div>,
  ]
</div>
`;

exports[`BookingBreakdown pretransaction data matches snapshot 1`] = `
<div
  className=""
>
  Array [
    <div>
      <div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div>
            <span>
              Fri 8:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 14
            </span>
          </div>
        </div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div>
            <span>
              Sun 10:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 16
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr />,
  ]
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerQuantity
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.baseUnitQuantity
      </span>
    </span>
    <span>
      40
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.peopleDiscountText
      </span>
    </span>
    <span>
      -10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.hoursDiscountText
      </span>
    </span>
    <span>
      -4
    </span>
  </div>
  Array [
    <hr />,
    <div>
      <div>
        <span>
          BookingBreakdown.total
        </span>
      </div>
      <div>
        26
      </div>
    </div>,
  ]
</div>
`;

exports[`BookingBreakdown provider canceled transaction data matches snapshot 1`] = `
<div
  className=""
>
  Array [
    <div>
      <div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div>
            <span>
              Fri 8:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 14
            </span>
          </div>
        </div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div>
            <span>
              Sun 10:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 16
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr />,
  ]
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerQuantity
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.baseUnitQuantity
      </span>
    </span>
    <span>
      40
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.peopleDiscountText
      </span>
    </span>
    <span>
      -10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.hoursDiscountText
      </span>
    </span>
    <span>
      -4
    </span>
  </div>
  Array [
    <hr />,
    <div>
      <span>
        <span>
          BookingBreakdown.subTotal
        </span>
      </span>
      <span>
        26
      </span>
    </div>,
  ]
  <div>
    <span>
      <span>
        BookingBreakdown.refund
      </span>
    </span>
    <span>
      26
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span>
      -2
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.refundProviderFee
      </span>
    </span>
    <span>
      -2
    </span>
  </div>
  Array [
    <hr />,
    <div>
      <div>
        <span>
          BookingBreakdown.providerTotalCanceled
        </span>
      </div>
      <div>
        0
      </div>
    </div>,
  ]
  <span>
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;

exports[`BookingBreakdown provider transaction data matches snapshot 1`] = `
<div
  className=""
>
  Array [
    <div>
      <div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingStart
            </span>
          </div>
          <div>
            <span>
              Fri 8:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 14
            </span>
          </div>
        </div>
        <div>
          <div>
            <span>
              BookingBreakdown.bookingEnd
            </span>
          </div>
          <div>
            <span>
              Sun 10:00 AM
            </span>
          </div>
          <div>
            <span>
              Apr 16
            </span>
          </div>
        </div>
      </div>
    </div>,
    <hr />,
  ]
  <div>
    <span>
      <span>
        BookingBreakdown.pricePerQuantity
      </span>
    </span>
    <span>
      10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.baseUnitQuantity
      </span>
    </span>
    <span>
      40
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.peopleDiscountText
      </span>
    </span>
    <span>
      -10
    </span>
  </div>
  <div>
    <span>
      <span>
        BookingBreakdown.hoursDiscountText
      </span>
    </span>
    <span>
      -4
    </span>
  </div>
  Array [
    <hr />,
    <div>
      <span>
        <span>
          BookingBreakdown.subTotal
        </span>
      </span>
      <span>
        26
      </span>
    </div>,
  ]
  <div>
    <span>
      <span>
        BookingBreakdown.commission
      </span>
    </span>
    <span>
      -2
    </span>
  </div>
  Array [
    <hr />,
    <div>
      <div>
        <span>
          BookingBreakdown.providerTotalDefault
        </span>
      </div>
      <div>
        24
      </div>
    </div>,
  ]
  <span>
    <span>
      BookingBreakdown.commissionFeeNote
    </span>
  </span>
</div>
`;
